[package]
name = "shortest_path_algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]
time = "^0.1.40"
rand = "0.8.5"
clap = { version = "3.0.10", features = ["derive"] }
core_simd = { git = "https://github.com/rust-lang/portable-simd"}
rudac = {version = "0.8.3"}

[profile.test]
opt-level = 3